# justforpractice

./: main.py  pyproject.toml
backend/: main.py
backend/agents/: nerva_agent.py
backend/integration/: figma_client.py  notion_client.py
